1. fixed the bug with splash screen disappearing immediately if    "ShowSplashOnStartup" was false 2. replaced wxIconView with wxListCtrl - don't know about wxGTK, but it looks    better (and much less code!) under Windows 3. drastic simplifications in wxMFolderDialogs: no INBOX subtype any more,    "group" is now a checkbox and flag and not a separate folder type

--- a/TODO
+++ b/TODO
@@ -13,6 +13,12 @@ $Id$
 *SEV PF WHO	DESCRIPTION
 *********************************************************************
 
+7		after deleting a folder from the tree, the opened message from
+		it stays shown in the main frame - this is confusing and
+		dangerous
+
+3	VZ	change MAXLOGINTRIALS - 3 is too many...
+
 6	VZ	"Browse subfolders" under root folder should give a choice:
 		subscribe to newsgroups, import MH folders, mirror server IMAP
 		folders...
