--- a/TODO
+++ b/TODO
@@ -167,6 +167,8 @@ $Id$
 
 ------------------ not release critical:
 
+3	KB	timeout settings in MailFolderCC totally thread-unsafe 
+		need protection
 8	KB	ComposeView/header dialog: remove my old-style
 		mechanism for setting custom headers. Move Vadim's
 		code to SendMessaggeCC. Introduce SendMessage??
