--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 (next release) on (date of next release)
+
+14.03.00 VZ: added changing folder colours depending on whether they have
+             new/recent messages
 08.03.00 VZ: browsing IMAP/NNTP servers and subscribing to them works
              GUI support for deleting folders physically and not only removing
 03.03.00 VZ: all expanded branches of the folder tree are now saved/restored
